Added New Recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1> Odin Recipes </h1>
+    <ul>
+        <li>
+            <a href="./recipes/chicken_noodle_salad.html"> Chicken Noodle Salad</a>
+        </li>
+        <li>
+            <a href="./recipes/fried_chicken.html"> Fried Chicken Steak</a>
+        </li>
+        <li>
+            <a href="./recipes/Pesto_Aioli.html"> Pesto Aioli</a>
+        </li>
+    </ul>
 </body>
 </html>
